--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "kitti_native_evaluation"]
 	path = kitti_native_evaluation
 	url = https://github.com/asharakeh/kitti_native_evaluation
+[submodule "aardvark"]
+	path = aardvark
+	url = https://github.com/aaalgo/aardvark
